#665 z-index issue fixed. Thanks to is4975.
git-svn-id: http://xe-core.googlecode.com/svn/branches/1.5.0@9911 201d5d3c-b55e-5fd7-737f-ddc643e51545

--- a/layouts/xe_official/css/black.css
+++ b/layouts/xe_official/css/black.css
@@ -32,7 +32,7 @@ body{background:#000}
 .iSearch .iText:focus{border:1px solid #B0B0AF;background-color:#A9A4A3}
 .iSearch .submit{vertical-align:middle;_position:relative;_top:-1px}
 /* Site Layout - Content Body */
-.body{position:relative;padding-bottom:30px;overflow:hidden;background:url(../images/black/bgContentBody.gif) repeat-y left top;border-bottom:1px solid #515151;zoom:1}
+.body{position:relative;z-index:1;padding-bottom:30px;overflow:hidden;background:url(../images/black/bgContentBody.gif) repeat-y left top;border-bottom:1px solid #515151;zoom:1}
 .body:after{content:"";display:block;clear:both}
 /* Site Layout - Column Left */
 .lnb{position:relative;width:201px;float:left}
